fixed a minor bug on multiple dc

--- a/client/partials/register.html
+++ b/client/partials/register.html
@@ -52,7 +52,7 @@
 	</form>
 	
 	<p style="position: absolute; bottom: 25px; left: 10px;">Created and Developed by: Jae Hoon Kim</p>
-	<p style="position: absolute; bottom: 5px; left: 10px;">If you find bugs, please email to jaehoonkim0801@gmail.com</p>
+	<p style="position: absolute; bottom: 5px; left: 10px;">If you find any bugs, please email to jaehoonkim0801@gmail.com</p>
 </div>
 
 <script>
